# pythonpro

./: .env.__backup__20251024_103115  .env.development  .env.example  .env.production.template  .env.sample  .eslintrc-filenames-validation.json  .gitignore  99_report_finale.md  AVVIA_GESTIONALE.bat  AVVIO_LOCALE.bat  AVVIO_RAPIDO.bat  Avvia-Docker-Pulito.ps1  CHANGELOG.md  CHANGELOG_POST_MIGRAZIONI.md  CHANGES.diff  CLAUDE.md  CONFIGURAZIONE_AVVIO_AUTOMATICO.bat  CONFIGURA_AVVIO_AUTOMATICO.bat  CONTRIBUTING.md  CREA_ASSEGNAZIONE.bat  DEPLOY_NOTES.md  ESCLUDERE_NODE_MODULES_DA_ONEDRIVE.bat  FIX_ASSIGNMENTS.md  FIX_FRONTEND_RIAVVIO.md  FIX_ONEDRIVE_SYNC.md  FIX_REPORT.md  FIX_REPORT_LOCAL.md  GUIDA_ELIMINA_PRESENZA.md  GUIDA_ENTI_E_TIMESHEET.md  GUIDA_PRODUZIONE.md  IMPLEMENTATION_P1.md  IMPLEMENTAZIONE_REQUISITI_2025-10-06.md  ISTRUZIONI_AVVIO.txt  ISTRUZIONI_RIAVVIO.txt  MODIFICHE_MANSIONI_ORE.md  MONITOR_SISTEMA.bat  Makefile  PREVENT_INVALID_FILENAMES.md  PRODUCTION_DEPLOY.diff  PRODUCTION_READINESS_COMPLETE.md  (+26 more)
.claude/: settings.local.json
artifacts/: SUMMARY.md  api_paths_grep.txt  axios_grep.txt  diag.md  diff.patch  error_handlers_grep.txt  error_rendering_grep.txt  final_network.txt  root_cause.md  smoke_final.txt  smoke_output.txt  tree_structure.txt
backend/: .dockerignore  .env.sample  Dockerfile  Dockerfile.prod  add_assignment_to_attendance.py  agent_workflows.py  alembic.ini  arq_worker.py  async_events.py  auth.py  backup_manager.py  cache.py  contract_generator.py  crud.py  database.py  entrypoint.sh  error_handler.py  file_upload.py  init_db.py  main.py  main_backup_20251013_140255.py  main_temp.py  metrics_endpoint.py  migrate_add_documents.py  migrate_add_ente_attuatore.py  migrate_add_progetto_mansione_ente.py  migrate_make_fiscal_code_required.py  models.py  monitoring.py  performance_monitor.py  piano_finanziario_config.py  piano_fondimpresa_config.py  pyproject.toml  pytest.ini  redis_cache.py  request_middleware.py  requirements.txt  requirements_local.txt  requirements_simple.txt  run_backup.py  (+15 more)
backend/ai_agents/: __init__.py  data_quality.py  document_processor.py  llm.py  mail_recovery.py  registry.py
backend/alembic/: env.py
backend/alembic/versions/: 001_add_document_columns.py  002_enforce_fiscal_code_unique.py  003_add_document_expiry_to_collaborators.py  004_add_agenzie_consulenti_aziende_clienti.py  005_add_collaborators_search_indexes.py  006_add_prodotti_listini.py  007_add_preventivi_ordini.py  008_add_piani_finanziari.py  009_add_piani_fondimpresa.py  010_link_piani_templates_by_avviso.py  011_add_avviso_to_projects.py  012_add_project_template_piano_finanziario.py  013_fix_unique_default_template_index.py  014_fix_fk_ondelete.py  015_add_collaborator_fk_to_voci_piano.py  016_add_created_by_user_to_voci_piano.py  017_rename_fondo_to_ente_erogatore.py  018_add_audit_logs_and_overlap_indexes.py  019_add_avvisi_table_and_fk_columns.py  020_cleanup_legacy_avviso_columns.py  021_allow_multiple_avvisi_per_template.py  022_add_azienda_cliente_profiling_fields.py  023_add_collaborator_profiling_fields.py  024_extend_azienda_contact_profiles.py  025_add_referente_cognome_to_aziende.py  026_add_contact_addresses_to_aziende.py  027_add_ai_agent_core_tables.py  028_add_agent_communication_drafts.py  029_add_complete_piani_finanziari_structure.py  030_add_email_inbox_items.py  528d59380940_add_piani_finanziari.py  a10d08b5e238_add_agent_tables.py  b1c2d3e4f5a6_add_agent_workflow_fields.py  c2d3e4f5a6b7_add_avviso_pf_id_to_projects.py  d3de21183882_add_documenti_richiesti.py  e4f5a6b7c8d9_consolidate_runtime_schema_updates.py  f6a7b8c9d0e1_fix_project_template_pf_fk.py  g7b8c9d0e1f2_fix_piano_unique_constraint.py  h8c9d0e1f2g3_migrate_legacy_avviso_to_avviso_pf.py  i9d0e1f2g3h4_add_project_progress_fields.py  (+7 more)
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  assignments.py  attendances.py  collaborators.py  contracts.py  entities.py  projects.py  reporting.py
backend/app/core/: __init__.py  settings.py
backend/app/domain/: __init__.py
backend/app/repositories/: __init__.py
backend/app/schemas/: __init__.py  assignments.py  attendances.py  collaborators.py  contracts.py  entities.py  projects.py
backend/app/services/: __init__.py
backend/app/utils/: __init__.py
backend/jobs/: check_scadenze.py  run_agents.py
backend/migrations/: env.py
backend/routers/: __init__.py  admin.py  agents.py  agenzie.py  allievi.py  assignments.py  attendances.py  auth.py  avvisi.py  aziende_clienti.py  catalogo.py  collaborators.py  consulenti.py  contract_templates.py  documenti_richiesti.py  email_inbox.py  implementing_entities.py  listini.py  ordini.py  piani_finanziari.py  piani_fondimpresa.py  preventivi.py  progetto_mansione_ente.py  projects.py  reporting.py  stats.py  system.py  whatsapp.py
backend/scripts/: init_templates.py  recalculate_progress.py
backend/services/: attachment_handler.py  document_intake_agent.py  email_inbox_worker.py  email_sender.py  inbox_reply_composer.py  inbox_router.py  whatsapp_sender.py  whatsapp_webhook_service.py
backend/templates/email/: default.html  default.txt  richiesta_integrazioni.html  richiesta_integrazioni.txt  sollecito_documento.html  sollecito_documento.txt
backend/tests/: test_agent_audit_fixes.py  test_api_in_memory.py  test_assignment_overlap.py  test_email_agent.py  test_routers_api_v1.py  test_whatsapp_meta.py
deploy/: backend.Dockerfile  docker-compose.yml
docs/: 01_inventario.md  AUDIT.md  AUDIT_BUG_FIXES.md  AUDIT_COERENZA.md  AUDIT_MODULI_DETTAGLIATO.md  AUDIT_REPORT_CERTIFICAZIONE.md  AUDIT_ROADMAP.md  AUDIT_TECNICO_ERP_2026-04-04.md  BACKLOG_IMPLEMENTATIVO_ERP_2026-04-04.md  CRONTAB_EXAMPLE.md  FASE_1_COMPLETATA.md  FINAL_CHECK.json  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_STATUS.json  OPENAPI_DIFF.md  RUNBOOK_produzione.md  audit_report.json  openapi_skeleton.yaml
frontend/: .dockerignore  .env.local.__backup__20251024_103115  .env.sample  .eslintrc.js  Dockerfile  Dockerfile.prod  nginx.conf  package-lock.json  package.json
mobile/: .env.example  README.md  (+5 more)
(+155 files in other folders)
