# ============================================================
# 📦 CONFIGURAZIONE PROGETTO - pyproject.toml
# ============================================================
# File di configurazione centrale per il progetto Python
# Gestisce dipendenze, tool di sviluppo, linting e testing
# ============================================================

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gestionale-collaboratori"
version = "3.0.0"
description = "Sistema di gestione collaboratori, progetti formativi e presenze"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Gestionale Team", email = "info@gestionale.local"}
]
keywords = ["formazione", "gestionale", "collaboratori", "progetti", "presenze"]

# Dipendenze di produzione
dependencies = [
    # Core FastAPI stack
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "python-multipart==0.0.6",

    # Database
    "sqlalchemy==2.0.23",
    "psycopg2-binary==2.9.9",
    "alembic==1.12.1",

    # Authentication & Security
    "python-jose[cryptography]==3.4.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.1.2",
    "PyJWT==2.8.0",

    # Email validation
    "email-validator==2.1.0",

    # CORS handling
    "fastapi-cors==0.0.6",

    # Caching
    "redis==5.0.1",

    # Monitoring
    "prometheus-fastapi-instrumentator==6.1.0",
    "prometheus-client==0.19.0",
    "psutil==5.9.6",

    # Production WSGI server
    "gunicorn==22.0.0",

    # Environment variables
    "python-dotenv==1.0.0",

    # Logging
    "structlog==23.2.0",

    # Data serialization
    "orjson==3.9.10",

    # HTTP client
    "httpx==0.25.2",

    # Validation
    "marshmallow==3.20.1",

    # Rate limiting
    "slowapi==0.1.9",

    # Compression
    "brotli==1.1.0",

    # Scheduling
    "schedule==1.2.0",
    "openpyxl>=3.1.0",
]

# Dipendenze opzionali per sviluppo
[project.optional-dependencies]
dev = [
    # Testing
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "pytest-xdist==3.5.0",
    "pytest-mock==3.12.0",
    "coverage[toml]==7.3.2",

    # Linting & Formatting
    "ruff==0.1.7",
    "black==23.11.0",
    "isort==5.12.0",

    # Type checking
    "mypy==1.7.1",
    "types-redis==4.6.0.11",

    # Security scanning
    "pip-audit==2.6.1",
    "bandit==1.7.5",
    "safety==2.3.5",

    # Documentation
    "mkdocs==1.5.3",
    "mkdocs-material==9.5.0",

    # Development tools
    "ipython==8.18.1",
    "pre-commit==3.5.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/gestionale-collaboratori"
Documentation = "https://github.com/yourusername/gestionale-collaboratori/wiki"
Repository = "https://github.com/yourusername/gestionale-collaboratori"
Issues = "https://github.com/yourusername/gestionale-collaboratori/issues"

# ============================================================
# 🔧 CONFIGURAZIONE TOOL
# ============================================================

# --- RUFF (Linting e Formatting moderno) ---
[tool.ruff]
target-version = "py311"
line-length = 100
indent-width = 4

# Directory da includere
src = ["app", "tests"]
include = ["*.py", "*.pyi"]

# File e directory da escludere
extend-exclude = [
    "__pycache__",
    ".venv",
    "venv",
    ".git",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "alembic/versions/*",
    "build",
    "dist",
]

[tool.ruff.lint]
# Regole da attivare
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented code)
    "PL",     # pylint
    "RUF",    # ruff-specific
]

# Regole da ignorare
ignore = [
    "E501",   # line-too-long (gestito dal formatter)
    "PLR0913", # too-many-arguments
    "PLR2004", # magic-value-comparison
    "B008",   # do-not-perform-function-call-in-argument-defaults (comune in FastAPI)
]

# Permetti fix automatici
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]  # Permetti import non usati in __init__
"tests/**/*.py" = ["ARG", "PLR2004"]  # Rilassati nei test

[tool.ruff.format]
# Usa " per le stringhe
quote-style = "double"
# Usa Unix line endings
line-ending = "auto"
# Indentazione
indent-style = "space"
# Docstring
docstring-code-format = true

# --- BLACK (Formatting - backup se preferito) ---
[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | venv
  | __pycache__
  | alembic/versions
)/
'''

# --- ISORT (Import sorting) ---
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["venv/*", "alembic/versions/*"]

# --- MYPY (Type checking) ---
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Graduale: false → true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_optional = true

# Plugin per SQLAlchemy
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

# Directory da escludere
exclude = [
    "venv",
    "alembic/versions",
    "__pycache__",
]

[[tool.mypy.overrides]]
module = [
    "slowapi.*",
    "prometheus_fastapi_instrumentator.*",
    "schedule.*",
]
ignore_missing_imports = true

# --- PYTEST ---
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=85",
    "--maxfail=1",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# --- COVERAGE ---
[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/__pycache__/*",
    "*/alembic/*",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

# --- BANDIT (Security) ---
[tool.bandit]
exclude_dirs = ["tests", "venv", "alembic/versions"]
skips = ["B101"]  # assert_used (ok nei test)

# ============================================================
# 📝 SCRIPTS
# ============================================================

[project.scripts]
gestionale-api = "app.main:run"

# ============================================================
# FINE CONFIGURAZIONE
# ============================================================
